[gd_scene load_steps=7 format=3 uid="uid://0gqsdwvu84lq"]

[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_8iup5"]
[ext_resource type="Theme" uid="uid://o77roctso2gb" path="res://Themes/Default.tres" id="2_p6kda"]
[ext_resource type="Script" path="res://Scripts/PromptDisplay.gd" id="3_8hhdc"]
[ext_resource type="Script" path="res://Scripts/StringGenerator.gd" id="4_gwi08"]
[ext_resource type="Script" path="res://Scripts/RestartButton.gd" id="4_q35em"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jeygc"]
bg_color = Color(0.6, 0, 0.6, 0)

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8iup5")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_p6kda")

[node name="ColorRect" type="ColorRect" parent="Background"]
layout_mode = 2
color = Color(0.0627451, 0.0941176, 0.12549, 1)

[node name="Prompt Display Container" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.084
anchor_top = 0.372
anchor_right = 0.918
anchor_bottom = 0.509
offset_left = 0.231995
offset_top = -0.0559998
offset_right = -0.536011
offset_bottom = 0.167999
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jeygc")

[node name="Prompt Display" type="RichTextLabel" parent="Prompt Display Container"]
layout_mode = 2
theme = ExtResource("2_p6kda")
bbcode_enabled = true
scroll_active = false
script = ExtResource("3_8hhdc")

[node name="Cursor" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1, 20)
layout_mode = 2
offset_left = 97.0
offset_top = 245.0
offset_right = 98.0
offset_bottom = 265.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Restart Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.48
anchor_top = 0.719
anchor_right = 0.52
anchor_bottom = 0.767
offset_left = 0.039978
offset_top = 0.0879822
offset_right = -0.0400391
offset_bottom = -0.0160217
text = "‚ü≥"
script = ExtResource("4_q35em")

[node name="String Generator" type="Node" parent="."]
script = ExtResource("4_gwi08")

[connection signal="char_deleted" from="." to="Prompt Display Container/Prompt Display" method="_on_game_char_deleted"]
[connection signal="char_inputted" from="." to="Prompt Display Container/Prompt Display" method="_on_game_char_inputted"]
[connection signal="correct_word_submitted" from="." to="Prompt Display Container/Prompt Display" method="_on_game_correct_word_submitted"]
[connection signal="incorrect_word_submitted" from="." to="Prompt Display Container/Prompt Display" method="_on_game_incorrect_word_submitted"]
[connection signal="prev_word" from="." to="Prompt Display Container/Prompt Display" method="_on_game_prev_word"]
[connection signal="pressed" from="Restart Button" to="String Generator" method="_on_restart_button_pressed"]
[connection signal="string_generated" from="String Generator" to="." method="_on_string_generator_string_generated"]
[connection signal="string_generated" from="String Generator" to="Prompt Display Container/Prompt Display" method="_on_string_generator_string_generated"]
